Фіксим баги. Робим нові

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<select name="category" id="sbj" class="btn w100 select" onchange="PDTest.start(2, this.value);resetButtons(this);">
 					<option selected disabled>Билет по теме</option>
 				</select>
-				<a name="category" id="sbjCD" class="btn w100 select" onclick="PDTest.start(2, 0);resetButtons(this);">Только  CD вопросы</a>
+				<a name="category" id="sbjCD" class="btn w100 select" onclick="PDTest.start(2, 0);resetButtons(this);" style="display:none;">Только  CD вопросы</a>
 			</div>
 			<div>
 				<a name="category" id="top100" class="btn w100 select" onclick="PDTest.start(4);resetButtons(this);">100 сложных</a>
